network rotation + bullet readiness

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,6 @@
   <title>Redsea Shooter – Online Prototype</title>
 </head>
 <body>
-  <script type="module" src="./main.js"></script>
+  <script type="module" src="./js/main.js"></script>
 </body>
 </html>
